:Fix(*): Fix a bug.修复用户头像回显

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/avue/avue.css">
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/avue/index.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>鸟巢</title>
+    <title>Laf快速开发平台</title>
 </head>
 
 <body>
